fix(shop): add flex-wrap to fix breaking of bottom background
- add ref to amount field and focus on it when it appears

--- a/src/pages/shop/shop.scss
+++ b/src/pages/shop/shop.scss
@@ -4,10 +4,10 @@
     background-position: center;
     background-image: url("#{$assets}/images/character.jpg");
     display: flex;
+    flex-wrap: wrap;
 
     &__wrapper {
         background-color: rgba(255, 255, 255, 0.8);
-        height: calc(100vh - 100px);
     }
 
     &__header {
@@ -111,12 +111,6 @@
                 margin: 0;
                 padding-right: 0.5rem;
             }
-        }
-    }
-
-    &.sell {
-        .shop__wrapper {
-            height: calc(100vh - 88px);
         }
     }
 }
